# libmatch

./: CMakeLists.txt  LICENSE  README.MD  usage.md
3rdpart/linux/ncnn/include/ncnn/: platform.h
3rdpart/linux/ncnn/lib/cmake/: OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  glslangTargets.cmake
3rdpart/linux/ncnn/lib/cmake/ncnn/: ncnn.cmake
3rdpart/linux/ncnn/lib/pkgconfig/: ncnn.pc
3rdpart/linux/ocvm/include/opencv4/opencv2/: core.hpp  features2d.hpp
3rdpart/linux/ocvm/include/opencv4/opencv2/core/: cvdef.h
3rdpart/linux/ocvm/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
3rdpart/ncnn/x64/include/ncnn/: platform.h
3rdpart/ncnn/x64/lib/: GenericCodeGen.lib  OGLCompiler.lib  OSDependent.lib  SPIRV.lib  glslang-default-resource-limits.lib  glslang.lib
3rdpart/ncnn/x64/lib/cmake/: OGLCompilerTargets.cmake  glslangTargets.cmake
3rdpart/ncnn/x64/lib/cmake/glslang/: glslang-targets.cmake
3rdpart/ncnn/x64/lib/cmake/ncnn/: ncnn-release.cmake  ncnn.cmake
3rdpart/ncnn/x64/lib/pkgconfig/: ncnn.pc
3rdpart/ncnn/x86/lib/: GenericCodeGen.lib  OGLCompiler.lib  OSDependent.lib  SPIRV.lib  glslang-default-resource-limits.lib  glslang.lib
3rdpart/ncnn/x86/lib/cmake/: OSDependentTargets.cmake  SPIRVTargets.cmake  glslangTargets.cmake
3rdpart/ncnn/x86/lib/cmake/glslang/: glslang-config.cmake
3rdpart/ncnn/x86/lib/cmake/ncnn/: ncnn.cmake
3rdpart/ocvm/x64/: OpenCVConfig.cmake  setup_vars_opencv4.cmd
3rdpart/ocvm/x64/include/opencv2/: features2d.hpp  imgproc.hpp
3rdpart/ocvm/x64/include/opencv2/core/: ocl.hpp
3rdpart/ocvm/x64/x64/vc14/staticlib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_highgui490.lib  opencv_photo490.lib  opencv_video490.lib
3rdpart/ocvm/x64/x64/vc17/staticlib/: OpenCVModules-release.cmake  opencv_highgui490.lib  opencv_photo490.lib  opencv_video490.lib
3rdpart/ocvm/x86/: LICENSE  setup_vars_opencv4.cmd
3rdpart/ocvm/x86/include/opencv2/: video.hpp
3rdpart/ocvm/x86/include/opencv2/video/: tracking.hpp
3rdpart/ocvm/x86/x86/vc14/staticlib/: OpenCVModules-release.cmake  opencv_features2d490.lib  opencv_highgui490.lib  opencv_photo490.lib  opencv_video490.lib
3rdpart/ocvm/x86/x86/vc17/staticlib/: OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_features2d490.lib  opencv_highgui490.lib  opencv_photo490.lib  opencv_video490.lib
3rdpart/windows/ncnn/x64/lib/: GenericCodeGen.lib  OGLCompiler.lib  OSDependent.lib  SPIRV.lib  glslang-default-resource-limits.lib  glslang.lib
3rdpart/windows/ncnn/x64/lib/cmake/: OSDependentTargets.cmake  SPIRVTargets.cmake
3rdpart/windows/ncnn/x64/lib/cmake/glslang/: glslang-targets-release.cmake
3rdpart/windows/ncnn/x86/include/ncnn/: platform.h
3rdpart/windows/ncnn/x86/lib/: GenericCodeGen.lib  OGLCompiler.lib  OSDependent.lib  SPIRV.lib  glslang-default-resource-limits.lib  glslang.lib
3rdpart/windows/ncnn/x86/lib/cmake/: OGLCompilerTargets.cmake
3rdpart/windows/ncnn/x86/lib/cmake/glslang/: glslang-config-version.cmake  glslang-config.cmake  glslang-targets.cmake
3rdpart/windows/ocvm/x64/: setup_vars_opencv4.cmd
3rdpart/windows/ocvm/x64/include/opencv2/: cvconfig.h
3rdpart/windows/ocvm/x64/x64/vc15/staticlib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  opencv_highgui4100.lib
3rdpart/windows/ocvm/x86/: OpenCVConfig.cmake  setup_vars_opencv4.cmd
3rdpart/windows/ocvm/x86/include/opencv2/: imgproc.hpp  opencv_modules.hpp
3rdpart/windows/ocvm/x86/include/opencv2/core/: base.hpp  mat.hpp
3rdpart/windows/ocvm/x86/x86/vc15/staticlib/: OpenCVConfig-version.cmake  OpenCVModules-release.cmake  (+2 more)
SDK/c_demo/: ddddrec.cpp  feat.cpp
SDK/csharp_sdk/: csharp_sdk.sln
SDK/csharp_sdk/csharp_sdk/: Program.cs  csharp_sdk.csproj
SDK/csharp_sdk/csharp_sdk/SDK/: Matcher.cs  NativeApi.cs  Utils.cs
SDK/epl_sdk/: Match.e
SDK/epl_sdk/models/: ch_PP-OCRv3_det_fp16.param  ch_PP-OCRv3_rec_fp16.param  paddleocr_keys.txt  yolov5s_6.0.json  yolov5s_6.2.json  yolov5s_6.2.param  yolov7-tiny.json
SDK/java_sdk/: build.gradle  settings.gradle
SDK/java_sdk/gradle/wrapper/: gradle-wrapper.properties
SDK/python_sdk/: LICENSE.txt  demo.py  setup.py
SDK/python_sdk/libmatch/: __del__.py  __init__.py  ddddocr.py  matcher.py  ppocr.py  tools.py
demo/: Match.e
demo/models/: ch_PP-OCRv4_det_infer_op11_opt.param  ch_PP-OCRv4_rec_infer_op11_opt.param  mobilenetv2_yolov3.json  yolov4-tiny-opt.json
docs/: usage.md
models/: ddddocr_keys.txt  ddddrec.param
python_sdk/: demo.py
python_sdk/libmatch/: matcher.py  ocr.py
src/: base_algorithm.cpp  base_algorithm.h  base_match.cpp  base_match.h  bmpWnd.cpp  bmpWnd.h  c_api.cpp  c_api.h  clipper.cpp  clipper.hpp  ddddrec.cpp  ddddrec.h  library.cpp  library.h  pp_ocr.cpp  pp_ocr.h
src/dxgi/: screenshot.cpp  screenshot.h
src/yolos/: yolov57.cpp  yolov57.h
(+6 files in other folders)
